--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
     <head>
         <meta charest="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Momentum</title>
         <link rel="stylesheet" href="style.css"/>
+        <title>Momentum APP</title>
     </head>
         <body>
-            <div class ="hello">
-            <h1>Grab me!</h1>
-            </div>
+            <form id="login-form" class="hidden">
+            <input 
+            required 
+            maxlength="15" 
+            type="text" 
+            placeholder="What is your name?" 
+            />
+            <input type="submit" value="Log In" />
+            </form>
+            <h1 id="greeting" class="hidden"></h1>
             <script src="app.js"> </script>
         </body>
 </html>
